--- a/R3p.bdo.testconsole/Imports/R3p.bdo.GUIloader/R3p.bdo.GUIloader/R3p.bdo.GUIloader/MainWindow.xaml
+++ b/R3p.bdo.testconsole/Imports/R3p.bdo.GUIloader/R3p.bdo.GUIloader/R3p.bdo.GUIloader/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:R3p.bdo.GUIloader"
         mc:Ignorable="d"
-        Title="R3p.BDO" Height="350" Width="525" ResizeMode="NoResize" Icon="favicon.ico" Background="White" WindowStartupLocation="Manual">
-    <Grid>
+        Title="R3p.BDO" Height="450" Width="767" ResizeMode="NoResize" Icon="favicon.ico" Background="White" WindowStartupLocation="Manual">
+    <Grid Width="780" Height="420">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="98*"/>
             <ColumnDefinition Width="76*"/>
@@ -15,35 +15,24 @@
         <Grid.Background>
             <ImageBrush ImageSource="Resources/bg001_bw.jpg" Opacity="0.4"/>
         </Grid.Background>
-        <TabControl HorizontalAlignment="Left" Height="321" Margin="-2,0,0,0" VerticalAlignment="Top" Width="521" Grid.ColumnSpan="3">
+        <TabControl HorizontalAlignment="Left" Height="410" Margin="-2,0,0,0" VerticalAlignment="Top" Width="757" Grid.ColumnSpan="3">
             <TabItem Header="Home">
                 <Grid Background="#FFE5E5E5">
-                    <TextBox x:Name="tbLog" HorizontalAlignment="Left" Height="237" Margin="6,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="499" Background="{x:Null}" BorderBrush="White" IsReadOnly="True"/>
-                    <Label x:Name="label" Content="" HorizontalAlignment="Left" Margin="428,267,0,0" VerticalAlignment="Top" Width="87" PreviewMouseLeftButtonUp="label_PreviewMouseLeftButtonUp">
+                    <TextBox x:Name="tbLog" HorizontalAlignment="Left" Height="306" Margin="6,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="537" Background="{x:Null}" BorderBrush="White" IsReadOnly="True"/>
+                    <Label x:Name="label" Content="" HorizontalAlignment="Left" Margin="648,342,0,0" VerticalAlignment="Top" Width="87" PreviewMouseLeftButtonUp="label_PreviewMouseLeftButtonUp">
                         <Label.Background>
                             <ImageBrush ImageSource="Resources/btn_donate_SM.gif"/>
                         </Label.Background>
                     </Label>
                     <Label Content="Logger" HorizontalAlignment="Left" Margin="0,-2,0,0" VerticalAlignment="Top" Height="27" Width="50"/>
-                    <Button x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="361,270,0,0" VerticalAlignment="Top" Width="62" Click="btnStart_Click"/>
-                    <TextBox x:Name="tbPath" HorizontalAlignment="Left" Height="23" Margin="79,268,0,2" TextWrapping="Wrap" Text="Click here to load BDO path..." VerticalAlignment="Center" Width="277" IsReadOnly="True" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" BorderBrush="{x:Null}" VerticalContentAlignment="Center" PreviewMouseLeftButtonUp="tbPath_PreviewMouseLeftButtonUp"/>
-                    <Label x:Name="label1_Copy1" Content="BDO Path" HorizontalAlignment="Left" Margin="6,267,0,0" VerticalAlignment="Top" Height="23" Width="64" VerticalContentAlignment="Center" Padding="5,0"/>
-                </Grid>
-            </TabItem>
-            <TabItem Header="FTP" HorizontalAlignment="Left" Width="35">
-                <Grid Background="#FFE5E5E5">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="67*"/>
-                        <ColumnDefinition Width="18*"/>
-                        <ColumnDefinition Width="21"/>
-                        <ColumnDefinition Width="79*"/>
-                        <ColumnDefinition Width="330*"/>
-                    </Grid.ColumnDefinitions>
-                    <CheckBox x:Name="cbAutoUpdate" Content="Enable AutoUpdate" HorizontalAlignment="Left" Margin="167,28,0,0" VerticalAlignment="Top" Click="cbAutoUpdate_Click" Grid.Column="4"/>
-                    <TextBox x:Name="tbKey" HorizontalAlignment="Left" Height="23" Margin="3,40,0,230" TextWrapping="Wrap" Text="Type FTP password here..." VerticalAlignment="Center" Width="227" IsReadOnly="False" BorderBrush="{x:Null}" VerticalContentAlignment="Center" TextChanged="tbKey_TextChanged" IsEnabled="False" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Grid.Column="2" Grid.ColumnSpan="3"/>
-                    <Label x:Name="label1_Copy" Content="FTP pass" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top" Height="23" Width="73" VerticalContentAlignment="Center" Padding="5,0" Grid.ColumnSpan="2"/>
-                    <Label x:Name="label1" Content="FTP user" HorizontalAlignment="Left" Margin="10,11,0,0" VerticalAlignment="Top" Height="23" Width="73" VerticalContentAlignment="Center" Padding="5,0" Grid.ColumnSpan="2"/>
-                    <TextBox x:Name="tbUser" HorizontalAlignment="Left" Height="23" Margin="3,12,0,258" TextWrapping="Wrap" Text="Type FTP user here..." VerticalAlignment="Center" Width="227" IsReadOnly="False" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" BorderBrush="{x:Null}" VerticalContentAlignment="Center" TextChanged="tbUser_TextChanged" IsEnabled="False" Grid.Column="2" Grid.ColumnSpan="3"/>
+                    <Button x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="565,346,0,0" VerticalAlignment="Top" Width="62" Click="btnStart_Click"/>
+                    <TextBox x:Name="tbPath" HorizontalAlignment="Left" Height="24" Margin="113,342,0,16" TextWrapping="Wrap" Text="Click here to load BDO path..." VerticalAlignment="Center" Width="277" IsReadOnly="True" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" BorderBrush="{x:Null}" VerticalContentAlignment="Center" PreviewMouseLeftButtonUp="tbPath_PreviewMouseLeftButtonUp"/>
+                    <Label x:Name="label1_Copy1" Content="BDO Path" HorizontalAlignment="Left" Margin="10,349,0,0" VerticalAlignment="Top" Height="23" Width="64" VerticalContentAlignment="Center" Padding="5,0"/>
+                    <TextBox x:Name="tbKey" HorizontalAlignment="Left" Height="23" Margin="614,53,0,306" TextWrapping="Wrap" Text="Type FTP password here..." VerticalAlignment="Center" Width="137" IsReadOnly="False" BorderBrush="{x:Null}" VerticalContentAlignment="Center" TextChanged="tbKey_TextChanged" IsEnabled="False" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
+                    <Label x:Name="label1_Copy" Content="FTP pass" HorizontalAlignment="Left" Margin="554,53,0,0" VerticalAlignment="Top" Height="23" Width="73" VerticalContentAlignment="Center" Padding="5,0"/>
+                    <Label x:Name="label1" Content="FTP user" HorizontalAlignment="Left" Margin="554,24,0,0" VerticalAlignment="Top" Height="23" Width="73" VerticalContentAlignment="Center" Padding="5,0"/>
+                    <TextBox x:Name="tbUser" HorizontalAlignment="Left" Height="23" Margin="614,25,0,334" TextWrapping="Wrap" Text="Type FTP user here..." VerticalAlignment="Center" Width="137" IsReadOnly="False" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" BorderBrush="{x:Null}" VerticalContentAlignment="Center" TextChanged="tbUser_TextChanged" IsEnabled="False"/>
+                    <CheckBox x:Name="cbAutoUpdate" Content="Enable AutoUpdate" HorizontalAlignment="Left" Margin="579,103,0,0" VerticalAlignment="Top" Click="cbAutoUpdate_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Settings" HorizontalAlignment="Left" Width="64" Margin="-2,-2,-27,0">
@@ -55,12 +44,12 @@
                         <ColumnDefinition Width="79*"/>
                         <ColumnDefinition Width="330*"/>
                     </Grid.ColumnDefinitions>
-                    <Label Content="AutoFish" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FF01146C" Width="73" FontFamily="Arial Black" FontSize="8" Grid.ColumnSpan="2"/>
-                    <CheckBox Content="Enabled" Margin="0,24,10,255" FontSize="10" IsEnabled="False"/>
-                    <CheckBox Content="FishDataLog" Margin="0,43,10,236" FontSize="10" Grid.ColumnSpan="2" IsEnabled="False"/>
-                    <CheckBox Content="HighLatencyMode" Margin="12,24,0,255" FontSize="10" Grid.ColumnSpan="3" Grid.Column="1" IsEnabled="False"/>
-                    <CheckBox Content="PredictMode" Margin="12,43,0,236" FontSize="10" Grid.ColumnSpan="3" Grid.Column="1" IsEnabled="False"/>
-                    <ComboBox Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="5,64,0,0" VerticalAlignment="Top" Width="103" FontSize="10" Grid.Column="1" Height="18" IsEnabled="False">
+                    <Label x:Name="LblAutoFish" Content="AutoFish" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FF01146C" Width="73" FontFamily="Arial Black" FontSize="8" Grid.ColumnSpan="2"/>
+                    <CheckBox x:Name="ChkAutoFishEnabled" Content="Enabled" Margin="0,24,37,344" FontSize="10"/>
+                    <CheckBox x:Name="ChkAutoFishFishDataLog" Content="FishDataLog" Margin="0,43,17,325" FontSize="10"/>
+                    <CheckBox x:Name="ChkAutoFishHighLatencyMode" Content="HighLatencyMode" Margin="12,24,41,344" FontSize="10" Grid.ColumnSpan="3" Grid.Column="1"/>
+                    <CheckBox x:Name="ChkAutoFishPredictMode" Content="PredictMode" Margin="12,43,57,325" FontSize="10" Grid.ColumnSpan="3" Grid.Column="1"/>
+                    <ComboBox x:Name="CbAutoFishCatchGrades" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="5,64,0,0" VerticalAlignment="Top" Width="103" FontSize="10" Grid.Column="1" Height="18" SelectedIndex="1">
                         <Label Content="White"/>
                         <Label Content="Green"/>
                         <Label Content="Blue"/>
@@ -68,23 +57,30 @@
                     </ComboBox>
                     <Label Content="CatchGrades" HorizontalAlignment="Left" Margin="1,62,0,0" VerticalAlignment="Top" FontSize="10" Height="24"/>
                     <Label Content="IdFilterWhite" HorizontalAlignment="Left" Margin="1,86,0,0" VerticalAlignment="Top" FontSize="10" Height="24" Width="66" RenderTransformOrigin="0.49,0.472"/>
-                    <TextBox Grid.ColumnSpan="3" Grid.Column="1" HorizontalAlignment="Left" Height="16" Margin="5,90,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="101" FontSize="10" IsEnabled="False"/>
+                    <TextBox x:Name="TbAutoFishIdFilterWhite" Grid.ColumnSpan="3" Grid.Column="1" HorizontalAlignment="Left" Height="16" Margin="5,90,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="101" FontSize="10"/>
                     <Label Content="IdFilterGreen" HorizontalAlignment="Left" Margin="1,107,0,0" VerticalAlignment="Top" FontSize="10" Height="24" Width="66" RenderTransformOrigin="0.49,0.472"/>
-                    <TextBox Grid.ColumnSpan="3" Grid.Column="1" HorizontalAlignment="Left" Height="16" Margin="5,111,0,0" TextWrapping="Wrap" Text="44165, 40218, 43801, 43802, 16382" VerticalAlignment="Top" Width="101" FontSize="10" IsEnabled="False" />
+                    <TextBox x:Name="TbAutoFishIdFilterGreen" Grid.ColumnSpan="3" Grid.Column="1" HorizontalAlignment="Left" Height="16" Margin="5,111,0,0" TextWrapping="Wrap" Text="44165, 40218, 43801, 43802, 16382" VerticalAlignment="Top" Width="101" FontSize="10" />
                     <Label Content="IdFilterBlue" HorizontalAlignment="Left" Margin="1,128,0,0" VerticalAlignment="Top" FontSize="10" Height="24" Width="66" RenderTransformOrigin="0.49,0.472"/>
-                    <TextBox Grid.ColumnSpan="3" Grid.Column="1" HorizontalAlignment="Left" Height="16" Margin="5,132,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="101" FontSize="10" IsEnabled="False"/>
+                    <TextBox x:Name="TbAutoFishIdFilterBlue" Grid.ColumnSpan="3" Grid.Column="1" HorizontalAlignment="Left" Height="16" Margin="5,132,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="101" FontSize="10"/>
                     <Label Content="IdFilterYellow" HorizontalAlignment="Left" Margin="1,149,0,0" VerticalAlignment="Top" FontSize="10" Height="24" Width="71" RenderTransformOrigin="0.49,0.472" Grid.ColumnSpan="2"/>
-                    <TextBox Grid.ColumnSpan="3" Grid.Column="1" HorizontalAlignment="Left" Height="16" Margin="5,153,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="101" FontSize="10" IsEnabled="False"/>
+                    <TextBox x:Name="TbAutoFishIdFilterYellow" Grid.ColumnSpan="3" Grid.Column="1" HorizontalAlignment="Left" Height="16" Margin="5,153,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="101" FontSize="10"/>
                     <Label Content="FamilyNameWhiteList" HorizontalAlignment="Left" Margin="1,170,0,0" VerticalAlignment="Top" FontSize="10" Height="24" Width="105" RenderTransformOrigin="0.49,0.472" Grid.ColumnSpan="3"/>
-                    <TextBox Grid.Column="3" HorizontalAlignment="Left" Height="16" Margin="5,174,0,0" TextWrapping="Wrap" Text="-" VerticalAlignment="Top" Width="62" FontSize="10" IsEnabled="False" />
-                    <Label Content="AutoRestore" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FF01146C" Width="73" FontFamily="Arial Black" FontSize="8" Grid.Column="4" Margin="10,0,0,0"/>
-                    <CheckBox Content="Enabled" Margin="10,24,263,255" FontSize="10" Grid.Column="4" IsEnabled="False"/>
-                    <Label Content="UIHack" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FF01146C" Width="73" FontFamily="Arial Black" FontSize="8" Grid.Column="4" Margin="84,0,0,0"/>
-                    <CheckBox Content="Enabled" Margin="84,24,189,255" FontSize="10" Grid.Column="4" IsEnabled="False"/>
-                    <Label Content="AutoItemRegister" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FF01146C" Width="89" FontFamily="Arial Black" FontSize="8" Grid.Column="4" Margin="152,0,0,0"/>
-                    <CheckBox Content="Enabled" Margin="152,24,121,255" FontSize="10" Grid.Column="4" IsEnabled="False"/>
-                    <Label Content="AutoItemBuy" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FF01146C" Width="89" FontFamily="Arial Black" FontSize="8" Grid.Column="4" Margin="241,0,0,0"/>
-                    <CheckBox Content="Enabled" Margin="241,24,32,255" FontSize="10" Grid.Column="4" IsEnabled="False"/>
+                    <TextBox x:Name="TbAutoFishFamilyNameWhiteList" Grid.Column="1" HorizontalAlignment="Left" Height="16" Margin="5,174,0,0" TextWrapping="Wrap" Text="-" VerticalAlignment="Top" Width="101" FontSize="10" IsEnabled="False" Grid.ColumnSpan="3" />
+                    <Label x:Name="LblAutoRestore" Content="AutoRestore" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FF01146C" Width="73" FontFamily="Arial Black" FontSize="8" Grid.Column="3" Margin="80,0,0,0" Grid.ColumnSpan="2"/>
+                    <CheckBox x:Name="ChkAutoRestoreEnabled" Content="Enabled" Margin="80,24,467,344" FontSize="10" Grid.Column="3" Grid.ColumnSpan="2"/>
+                    <Label x:Name="LblUIHack" Content="UIHack" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FF01146C" Width="73" FontFamily="Arial Black" FontSize="8" Grid.Column="4" Margin="37,0,0,0"/>
+                    <CheckBox x:Name="ChkUIHackEnabled" Content="Enabled" Margin="37,24,395,344" FontSize="10" Grid.Column="4"/>
+                    <Label x:Name="LblAutoItemRegister" Content="AutoItemRegister" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FF01146C" Width="89" FontFamily="Arial Black" FontSize="8" Grid.Column="4" Margin="105,0,0,0"/>
+                    <CheckBox x:Name="ChkAutoItemRegisterEnabled" Content="Enabled" Margin="105,24,318,344" FontSize="10" Grid.Column="4"/>
+                    <Label x:Name="LblAutoItemBuy" Content="AutoItemBuy" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FF01146C" Width="89" FontFamily="Arial Black" FontSize="8" Grid.Column="4" Margin="194,0,0,0"/>
+                    <CheckBox x:Name="ChkAutoItemBuyEnabled" Content="Enabled" Margin="194,24,231,344" FontSize="10" Grid.Column="4"/>
+                    <Button x:Name="BtnSaveSettings" Content="Save" Grid.Column="4" HorizontalAlignment="Left" Margin="393,347,0,0" VerticalAlignment="Top" Width="85" Height="25" Cursor="Arrow" BorderBrush="#FF3A5378" Background="#FFDBE3FB" Click="BtnSaveSettings_Click"/>
+                    <Label x:Name="LblAutoPotion" Content="AutoPotion" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FF01146C" Width="89" FontFamily="Arial Black" FontSize="8" Grid.Column="3" Margin="75,56,0,0" Grid.ColumnSpan="2"/>
+                    <CheckBox x:Name="ChkAutoPotionEnabled" Content="Enabled" Margin="75,80,467,288" FontSize="10" Grid.Column="3" Grid.ColumnSpan="2"/>
+                    <Label x:Name="LblAutoPotionHp" Content="HP" Margin="72,101,20,0" VerticalAlignment="Top" FontSize="10" Height="24" Grid.Column="3"/>
+                    <Label x:Name="LblAutoPotionMp" Content="MP" Margin="72,125,19,0" VerticalAlignment="Top" FontSize="10" Height="24" Grid.Column="3"/>
+                    <Slider x:Name="SldAutoPotionHp" Grid.Column="3" HorizontalAlignment="Left" Margin="97,105,0,0" VerticalAlignment="Top" Width="54" Grid.ColumnSpan="2" Value="80" Maximum="100" SmallChange="1" AutoToolTipPlacement="BottomRight"/>
+                    <Slider x:Name="SldAutoPotionMp" Grid.Column="3" HorizontalAlignment="Left" Margin="97,129,0,0" VerticalAlignment="Top" Width="54" Grid.ColumnSpan="2" Maximum="100" Value="30" SmallChange="1" AutoToolTipPlacement="BottomRight"/>
                 </Grid>
             </TabItem>
         </TabControl>
